--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="enemy-box">  
         <h2>Froog</h2>
-        <img src="images/froog.png" class="character" id="enemy-img">
+        <img src="images/froog.PNG" class="character" id="enemy-img">
         <p>HEALTH: <span id="enemy-health">50</span></p>
         <p>Attack: <span id="enemy-attack">6</span></p>
         <p>Defense: <span id="enemy-defense">5</span></p>
